# Newstival

./: README.md  data_festival_news_data.py  env  festival_details_crolling.py  festival_news_data.py  news_results.json  package-lock.json
Data_crawling/: festival_details_crolling.py
backend/: document_store.py  load_data.py  pyproject.toml  rag_model.py  requirements.txt  명령어.txt
backend/accounts/: admin.py  apps.py  models.py
backend/accounts/migrations/: 0001_initial.py  0002_user_nickname.py
backend/backend/: settings.py  urls.py
backend/boards/: models.py  serializers.py  urls.py  views.py
backend/boards/migrations/: 0001_initial.py  0002_board_keyword.py
backend/data/festival_info/: festival_details.json  festival_details_crolling.json
backend/data/festival_news/: festival_news_data.json
backend/festivals_details/: apps.py  models.py  serializers.py  urls.py  views.py
backend/festivals_details/migrations/: 0001_initial.py  0002_festival_details_main_region.py
backend/festivals_news/: apps.py  models.py  serializers.py  stopwords-ko.txt  urls.py  views.py
backend/festivals_news/migrations/: 0001_initial.py  0002_festivalnews_delete_festival_news.py  0003_alter_festivalnews_festival_name_and_more.py  0004_alter_festivalnews_festival_name_and_more.py  0005_festivalnews_main_region.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.vue  main.js
frontend/src/api/: axiosInstance.js  dashboard.js
frontend/src/router/: index.js
frontend/src/stores/: user.js
frontend/src/views/: BoardCreateView.vue  BoardView.vue  (+5 more)
