[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["안지수 <ajs7270@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.16"
djangorestframework = "^3.15.2"
dj-rest-auth = "^7.0.0"
django-allauth = "^65.2.0"
psycopg2 = "^2.9.10"
requests = "^2.32.3"
django-cors-headers = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
